--- a/app/assets/stylesheets/pages/_table.scss
+++ b/app/assets/stylesheets/pages/_table.scss
@@ -87,11 +87,11 @@
 .box1{
   height: 100vh;
   background-color: $light-gray;
-text-align: center;
-display: flex;
-justify-content: space-around;
-flex-direction: row;
-align-items: center;
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
 
 
 }
@@ -106,17 +106,17 @@ h3{
 
 
 
-    input[type="radio"] {
-      display: none;
-    }
+input[type="radio"] {
+  display: none;
+}
 
-    input[type="radio"]:checked + label {
-      background: $blue-aca;
-      color: white;
-      margin:0;
-      width:100%;
-      border-radius:0px !important;
-    }
+input[type="radio"]:checked + label {
+  background: $blue-aca;
+  color: white;
+  margin:0;
+  width:100%;
+  border-radius:0px !important;
+}
 
 .flatimg{
   height: 150px;
@@ -125,15 +125,15 @@ h3{
 }
 
 .button-table{
-    color:$orange ;
-    opacity: 1;
-    float: right;
+  color:$orange ;
+  opacity: 1;
+  float: right;
 }
 
 .button-table:hover{
-    color:$orange ;
-    text-decoration: none;
-    opacity: 1;
+  color:$orange ;
+  text-decoration: none;
+  opacity: 1;
 }
 button {
   color: #F56D55;
@@ -145,3 +145,50 @@ button {
   opacity: 0.6;
   background-color: white;
 }
+
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
+}
+
+.btn-warning {
+  background-color: #fff;
+  color: #000;
+
+}
+
+.btn-warning:hover {
+  background-color: #fff;
+  color: #000;
+
+}
+
+.btn-warning:active {
+  background-color: #fff;
+  color: #000;
+
+}
+
+.btn-warning:focus {
+  background-color: #fff;
+  color: #000;
+
+}
+
+
